2007-11-05  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_error_level_label): New.

	* cc-style.css: New rules for error level descriptions.

	* error-description-source.xml: Description for error
	levels is added.

2007-11-04  Wakaba  <wakaba@suika.fam.cx>

	* cc-interface.en.html (i): |text/cache-manifest| is added.

	* cc-style.css: New rules for manifest dump.

	* cc.cgi: Support for |text/cache-manifest|.

	* error-description-soruce.en.xml (#cache-manifest-errors): New
	section.

2007-09-10  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi, cc-style.css: Scoring support.

2007-09-03  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Updated.

2007-09-02  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Report document sections are now output by
	corresponding subroutines.

2007-08-26  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: New catalog macros |local-name| and |element-local-name|.

2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi, parser-manakai.cgi, parser.cgi: Use |Message::CGI::HTTP|
	instead of |SuikaWiki::Input::HTTP|.

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* cc-interface.en.html: IMT |application/atom+xml| is added.
	Link to |cc-todo| is added.

2007-07-24  Wakaba  <wakaba@suika.fam.cx>

	* error-description.xml: Description for "after body", "bare etago",
	and "bogus end tag" are added.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Don't remove bullet of the document node
	in the document tree.  Don't collapse white space
	in the |code| elements.

	* cc.cgi: Put identifiers and class names into |code|
	element.
	(get_text): Template for attribute values are supported.

	* error-descriotion-source.en.xml: More error descriptions
	are included.  Use |{@}| attribute value insertion macro
	for errors in which it should be useful.

2007-07-17  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Output HTTP and HTML header before try to
	fetch the specified resource for usability.  Add
	tables, identifiers, and terms section to the TOC.